--- a/src/assets/styles/scss/components/_hero.scss
+++ b/src/assets/styles/scss/components/_hero.scss
@@ -1,5 +1,6 @@
 .hero {
   background: white;
+  overflow: hidden;
   &-wrapper {
     display: flex;
     flex-direction: column;
